--- a/untitled9/templates/login.html
+++ b/untitled9/templates/login.html
@@ -1,3 +1,32 @@
 {% extends 'xadmin/base_site.html' %}
-<p>fdsf</p>
-{% block content %}<p>It is now {{ current_date }}.</p>{% endblock %}
+{% block content %}
+<form action="/home/">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Check me out
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+
+
+
+
+
+
+
+{% endblock %}
